--- a/sparrow-ui/requirements.txt
+++ b/sparrow-ui/requirements.txt
@@ -1,4 +1,95 @@
-streamlit==1.22.0
+altair==5.3.0
+anyascii==0.3.2
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.7.0
+Brotli==1.1.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cssselect2==0.7.0
+cycler==0.12.1
+defusedxml==0.7.1
+dnspython==2.6.1
+filelock==3.13.4
+Flask==3.0.1
+fonttools==4.51.0
+fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+h5py==3.11.0
+html5lib==1.1
+huggingface-hub==0.22.2
+idna==3.6
+importlib_metadata==7.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langdetect==1.0.9
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
+matplotlib==3.8.4
+mdurl==0.1.2
+mplcursors==0.5.3
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+onnx==1.16.0
+opencv-python==4.9.0.80
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+protobuf==4.25.3
+pyarrow==15.0.2
+pyclipper==1.3.0.post5
+pycparser==2.22
+pydeck==0.8.1b0
+pydyf==0.9.0
+Pygments==2.17.2
+pymongo==4.6.3
+pyparsing==3.1.2
+pypdfium2==4.29.0
+pyphen==0.14.0
+python-dateutil==2.9.0.post0
+-e git+https://github.com/mindee/doctr.git@99eb5a33aaab2a7a0e037963810c7304a9cbd956#egg=python_doctr
+pytz==2024.1
+PyYAML==6.0.1
+rapidfuzz==3.8.1
+referencing==0.34.0
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+scipy==1.13.0
+shapely==2.0.4
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+streamlit==1.33.0
+sympy==1.12
+tenacity==8.2.3
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tornado==6.4
+tqdm==4.66.2
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.0
+watchdog==4.0.0
+weasyprint==61.2
+webencodings==0.5.1
+Werkzeug==3.0.1
+zipp==3.18.1
+zopfli==0.2.3
 streamlit_option_menu
 streamlit-sparrow-labeling==0.1.1
 streamlit_nested_layout
